--- a/public/index.html
+++ b/public/index.html
@@ -2,50 +2,46 @@
 <html lang="en">
   <head>
     <title>Ardhangini</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Google fonts include -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,900%7CYesteryear"
-      rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Google fonts include -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,900%7CYesteryear"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"
+    />
     <!--Custom resources-->
-    <link rel="icon" href="images/logo.png" type="image/png">
+    <link rel="icon" href="images/logo.png" type="image/png" />
 
-    <link rel="stylesheet" href="css/bootstrap1.min.css">
-
-    <link rel="stylesheet" href="css/themify-icons.css">
-
-    <link rel="stylesheet" href="css/swiper.min.css">
-
-    <link rel="stylesheet" href="css/select2.min.css">
-
-    <link rel="stylesheet" href="css/nice-select.css">
-
-    <link rel="stylesheet" href="css/owl.carousel.css">
-
-    <link rel="stylesheet" href="css/gijgo.min.css">
-
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/tagsinput.css">
-
-    <link rel="stylesheet" href="css/date-picker.css">
-
-    <link rel="stylesheet" href="css/jquery.dataTables.min.css">
-    <link rel="stylesheet" href="css/responsive.dataTables.min.css">
-    <link rel="stylesheet" href="css/buttons.dataTables.min.css">
-
-    <link rel="stylesheet" href="css/summernote-bs4.css">
-
-    <link rel="stylesheet" href="css/morris.css">
-
-    <link rel="stylesheet" href="css/material-icons.css">
-
-    <link rel="stylesheet" href="css/metisMenu.css">
-
-    <link rel="stylesheet" href="css/style1.css">
-    <link rel="stylesheet" href="css/default.css" id="colorSkinCSS">
+    <link rel="stylesheet" href="css/themify-icons.css" />
+    <link rel="stylesheet" href="css/swiper.min.css" />
+    <link rel="stylesheet" href="css/select2.min.css" />
+    <link rel="stylesheet" href="css/nice-select.css" />
+    <link rel="stylesheet" href="css/owl.carousel.css" />
+    <link rel="stylesheet" href="css/gijgo.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/tagsinput.css" />
+    <link rel="stylesheet" href="css/date-picker.css" />
+    <link rel="stylesheet" href="css/jquery.dataTables.min.css" />
+    <link rel="stylesheet" href="css/responsive.dataTables.min.css" />
+    <link rel="stylesheet" href="css/buttons.dataTables.min.css" />
+    <link rel="stylesheet" href="css/summernote-bs4.css" />
+    <link rel="stylesheet" href="css/morris.css" />
+    <link rel="stylesheet" href="css/material-icons.css" />
+    <!-- <link rel="stylesheet" href="css/metisMenu.css" /> -->
+    <!-- <link rel="stylesheet" href="css/style1.css" /> -->
+    <link rel="stylesheet" href="css/default.css" id="colorSkinCSS" />
   </head>
   <body class="crm_body_bg">
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -62,61 +58,42 @@
     -->
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <!--Custom resources-->
   <script src="js/jquery1-3.4.1.min.js"></script>
-
-    <script src="js/popper1.min.js"></script>
-
-    <script src="js/bootstrap1.min.js"></script>
-
-    <script src="js/metisMenu.js"></script>
-
-    <script src="js/jquery.waypoints.min.js"></script>
-
-    <script src="js/Chart.min.js"></script>
-
-    <script src="js/jquery.counterup.min.js"></script>
-
-    <script src="js/swiper.min.js"></script>
-
-    <script src="js/jquery.nice-select.min.js"></script>
-
-    <script src="js/owl.carousel.min.js"></script>
-
-    <script src="js/gijgo.min.js"></script>
-
-    <script src="js/jquery.dataTables.min.js"></script>
-    <script src="js/dataTables.responsive.min.js"></script>
-    <script src="js/dataTables.buttons.min.js"></script>
-    <script src="js/buttons.flash.min.js"></script>
-    <script src="js/jszip.min.js"></script>
-    <script src="js/pdfmake.min.js"></script>
-    <script src="js/vfs_fonts.js"></script>
-    <script src="js/buttons.html5.min.js"></script>
-    <script src="js/buttons.print.min.js"></script>
-
-    <script src="js/datepicker.js"></script>
-    <script src="js/datepicker.en.js"></script>
-    <script src="js/datepicker.custom.js"></script>
-    <script src="js/chart.min.js"></script>
-
-    <script src="js/jquery.barfiller.js"></script>
-
-    <script src="js/tagsinput.js"></script>
-
-    <script src="js/summernote-bs4.js"></script>
-    <script src="js/amcharts.js"></script>
-    <script src="js/apexcharts.js"></script>
-    <script src="js/apex_realestate.js"></script>
-
-    <script src="js/core.js"></script>
-    <script src="js/charts.js"></script>
-    <script src="js/animated.js"></script>
-    <script src="js/kelly.js"></script>
-    <script src="js/chart-custom.js"></script>
-
-    <script src="js/custom.js"></script>
-    <script src="js/bar_active_1.js"></script>
-    <script src="js/apex_chart_list.js"></script>
+  <script src="js/popper1.min.js"></script>
+  <script src="js/metisMenu.js"></script>
+  <script src="js/jquery.waypoints.min.js"></script>
+  <script src="js/Chart.min.js"></script>
+  <script src="js/jquery.counterup.min.js"></script>
+  <script src="js/swiper.min.js"></script>
+  <script src="js/jquery.nice-select.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/gijgo.min.js"></script>
+  <script src="js/jquery.dataTables.min.js"></script>
+  <script src="js/dataTables.responsive.min.js"></script>
+  <script src="js/dataTables.buttons.min.js"></script>
+  <script src="js/buttons.flash.min.js"></script>
+  <script src="js/jszip.min.js"></script>
+  <script src="js/pdfmake.min.js"></script>
+  <script src="js/vfs_fonts.js"></script>
+  <script src="js/buttons.html5.min.js"></script>
+  <script src="js/buttons.print.min.js"></script>
+  <script src="js/datepicker.js"></script>
+  <script src="js/datepicker.en.js"></script>
+  <script src="js/datepicker.custom.js"></script>
+  <script src="js/chart.min.js"></script>
+  <script src="js/jquery.barfiller.js"></script>
+  <script src="js/tagsinput.js"></script>
+  <script src="js/summernote-bs4.js"></script>
+  <script src="js/amcharts.js"></script>
+  <script src="js/apexcharts.js"></script>
+  <script src="js/apex_realestate.js"></script>
+  <script src="js/core.js"></script>
+  <script src="js/charts.js"></script>
+  <script src="js/animated.js"></script>
+  <script src="js/kelly.js"></script>
+  <script src="js/chart-custom.js"></script>
+  <script src="js/custom.js"></script>
+  <script src="js/bar_active_1.js"></script>
+  <script src="js/apex_chart_list.js"></script>
 </html>
